[package]
name = "tui-markup-ansi-macro"
version = "0.1.0"
authors = ["7sDream <i@7sdre.am>"]
edition = "2021"
description = "a macro to generate styled ansi escape sequence from markup language"
documentation = "https://docs.rs/tui-markup-ansi-macro"
readme = "README.md"
homepage = "https://github.com/7sDream/tui-markup-ansi-macro"
repository = "https://github.com/7sDream/tui-markup-ansi-macro"
license = "BSD-3-Clause-Clear"
keywords = ["ansi", "terminal", "color", "markup", "text", "parser"]
categories = ["text-processing"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui-markup = { version = "0.2.1", features = ["ansi"] }
ansi_term = "0.12.1"
litrs = "0.2.3"
proc-macro-error = { version = "1.0.4", default-features = false }
